--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "demo",
+  "name": "next-js-14-i18n",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,15 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "accept-language": "^3.0.18",
+    "i18next": "^23.11.5",
+    "i18next-browser-languagedetector": "^8.0.0",
+    "i18next-http-backend": "^2.5.2",
+    "i18next-resources-to-backend": "^1.2.1",
+    "next": "14.0.0",
     "react": "^18",
+    "react-cookie": "^7.1.4",
     "react-dom": "^18",
-    "next": "14.0.0"
+    "react-i18next": "^14.1.2"
   },
   "devDependencies": {
     "autoprefixer": "^10",
-    "postcss": "^8",
-    "tailwindcss": "^3",
     "eslint": "^8",
-    "eslint-config-next": "14.0.0"
+    "eslint-config-next": "14.0.0",
+    "postcss": "^8",
+    "tailwindcss": "^3"
   }
 }
